# tree-sitter-db

./: README.md  env.sh  pyproject.toml
src/tree_sitter_db/: __init__.py  __main__.py  cli.py  indexer.py  schema.py
src/tree_sitter_db/extractors/: __init__.py  base.py  c_ext.py  cpp_ext.py  python_ext.py
