[project]
name = "tree-sitter-db"
version = "0.1.0"
description = "Extract code knowledge from repositories using tree-sitter into SQLite"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
]

[project.scripts]
tree-sitter-db = "tree_sitter_db.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tree_sitter_db"]
